--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,11 +5,11 @@ server.port= 8080
 spring.datasource.hikari.driver-class-name=com.mysql.cj.jdbc.Driver
 
 # mysql 실제 서버 접속 문자열
-spring.datasource.hikari.jdbc-url=jdbc:mysql://ec2.dlhdlh-aws.link:3306/WatCat?useUnicode=true&characterEncoding=utf8&serverTimezone=UTC
+spring.datasource.hikari.jdbc-url=jdbc:mysql://dworld.dlhdlh-aws.link:3306/WatCat?useUnicode=true&characterEncoding=utf8&serverTimezone=UTC
 # 사용자ID
 spring.datasource.hikari.username=dlhdlh
 # 접속 비밀번호
-spring.datasource.hikari.password=!Aws7520
+spring.datasource.hikari.password=!Diqdiq7520
 # 정상 동작을 확인하는 기본 명령어
 spring.datasource.hikari.connection-test-query=SELECT 1 
  
